# symm

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  packages.rs  symlinks.rs
