[package]
name = "symm"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Simple symlink manager"
homepage = "https://github.com/tednaaa/symm"
repository = "https://github.com/tednaaa/symm"
readme = "README.md"
keywords = ["symlink", "manager", "cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14.0"
dirs = "6.0.0"
toml = "0.9.5"

clap = { version = "4.5.45", features = ["derive"] }
ansi_term = "0.12.1"
